--- a/package.json
+++ b/package.json
@@ -11,28 +11,30 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@wry/equality": "^0.5.7"
+    "@apollo/client": "^3.8.0",
+    "@wry/equality": "^0.5.7",
+    "effector": "^23.0.0",
+    "graphql": "^16.4.0",
+    "patronum": "^2.1.0"
   },
   "devDependencies": {
-    "@apollo/client": "^3.6.0",
     "@types/eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "effector": "^23.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.2",
-    "patronum": "^2.1.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.6.0",
+    "@apollo/client": "^3.8.0",
     "effector": "^23.0.0",
+    "graphql": "^16.4.0",
     "patronum": "^2.1.0"
   }
 }
