--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
   "name": "effector-apollo",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "private": "true",
   "description": "Effector bindings for Apollo Client",
   "keywords": [],
   "author": {
     "name": "Kireev Mikhail"
   },
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.mts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "types": "./dist/index.d.mts",
   "scripts": {
+    "build": "rollup --config",
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0",
     "@wry/equality": "^0.5.7",
-    "effector": "^23.0.0",
     "graphql": "^16.4.0",
     "patronum": "^2.1.0"
   },
   "devDependencies": {
+    "@apollo/client": ">=3.6.0",
     "@types/eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "effector": "^23.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -28,13 +38,13 @@
     "eslint-plugin-prettier": "^5.1.2",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
+    "rollup": "^4.9.2",
+    "rollup-plugin-ts": "^3.4.5",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.8.0",
-    "effector": "^23.0.0",
-    "graphql": "^16.4.0",
-    "patronum": "^2.1.0"
+    "@apollo/client": ">=3.6.0",
+    "effector": "^23.0.0"
   }
 }
