--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": [".eslintrc.cjs", "vitest.config.ts"]
+  "include": [".eslintrc.cjs", "vitest.config.ts", "rollup.config.js"]
 }
