--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "effector-apollo",
-  "version": "0.3.0-rc4",
+  "version": "0.3.0",
   "description": "Effector bindings for Apollo Client",
   "keywords": [
     "effector",
     "apollo",
-    "react"
+    "react",
+    "graphql"
   ],
   "homepage": "https://github.com/kireevmp/effector-apollo#readme",
   "bugs": {
@@ -29,15 +30,15 @@
   "types": "./dist/index.d.mts",
   "scripts": {
     "build": "rollup --config",
-    "test": "vitest",
-    "prepack": "pnpm build"
+    "prepack": "pnpm build",
+    "test": "vitest"
   },
   "dependencies": {
     "graphql": "^16.4.0",
     "patronum": "^2.1.0"
   },
   "devDependencies": {
-    "@apollo/client": ">=3.6.0",
+    "@apollo/client": "^3.6.0",
     "@types/eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
@@ -55,7 +56,7 @@
     "vitest": "^1.1.0"
   },
   "peerDependencies": {
-    "@apollo/client": ">=3.6.0",
+    "@apollo/client": "^3.6.0",
     "effector": "^23.0.0"
   }
 }
