--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build": "rollup --config",
     "prepack": "pnpm build",
+    "prepare": "husky install",
     "test": "vitest",
     "test:types": "vitest run --typecheck.only"
   },
@@ -50,6 +51,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.2",
+    "husky": "^8.0.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "rollup": "^4.9.2",
