--- a/package.json
+++ b/package.json
@@ -31,33 +31,34 @@
   "scripts": {
     "build": "rollup --config",
     "prepack": "pnpm build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "test": "vitest",
     "test:types": "vitest run --typecheck.only"
   },
   "dependencies": {
-    "graphql": "^16.4.0",
-    "patronum": "^2.1.0"
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "@apollo/client": "^3.6.0",
+    "@apollo/client": "^3.10.2",
     "@changesets/cli": "^2.27.1",
-    "@types/eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "effector": "^23.0.0",
-    "eslint": "^8.56.0",
+    "@types/eslint": "^8.56.10",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-istanbul": "^1.6.0",
+    "effector": "^23.2.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.2",
-    "husky": "^8.0.0",
-    "prettier": "^3.1.1",
-    "react": "^18.2.0",
-    "rollup": "^4.9.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "patronum": "^2.2.0",
+    "prettier": "^3.2.5",
+    "react": "^18.3.1",
+    "rollup": "^4.17.2",
     "rollup-plugin-ts": "^3.4.5",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.6.0",
