--- a/package.json
+++ b/package.json
@@ -39,32 +39,33 @@
     "test:types": "vitest run --typecheck.only"
   },
   "dependencies": {
-    "graphql": "^16.8.1"
+    "graphql": "^16.9.0"
   },
   "devDependencies": {
-    "@apollo/client": "^3.10.2",
-    "@changesets/cli": "^2.27.1",
+    "@apollo/client": "^3.11.9",
+    "@changesets/cli": "^2.27.9",
     "@types/eslint": "^8.56.10",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-istanbul": "^1.6.0",
-    "effector": "^23.2.1",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "@vitest/coverage-istanbul": "^2.1.4",
+    "effector": "^23.2.3",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "patronum": "^2.2.0",
-    "prettier": "^3.2.5",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "patronum": "^2.3.0",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
-    "rollup": "^4.17.2",
+    "rollup": "^4.25.0",
     "rollup-plugin-ts": "^3.4.5",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   },
   "peerDependencies": {
     "@apollo/client": "^3.6.0",
     "effector": "^23.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
