--- a/package.json
+++ b/package.json
@@ -44,15 +44,14 @@
   "devDependencies": {
     "@apollo/client": "^3.11.9",
     "@changesets/cli": "^2.27.9",
-    "@types/eslint": "^8.56.10",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@eslint/js": "^9.14.0",
+    "@types/eslint": "^9.6.1",
     "@typescript-eslint/parser": "^8.13.0",
     "@vitest/coverage-istanbul": "^2.1.4",
     "effector": "^23.2.3",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.14.0",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import-x": "^4.4.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
     "patronum": "^2.3.0",
@@ -61,6 +60,7 @@
     "rollup": "^4.25.0",
     "rollup-plugin-ts": "^3.4.5",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
     "vitest": "^2.1.4"
   },
   "peerDependencies": {
