--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "effector-apollo",
   "version": "0.5.0",
+  "private": true,
   "description": "Effector bindings for Apollo Client",
   "keywords": [
     "effector",
@@ -21,18 +22,9 @@
     "name": "Kireev Mikhail"
   },
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "types": "./dist/index.d.mts",
-  "files": [
-    "/dist"
-  ],
+  "exports": "./src/index.ts",
   "scripts": {
-    "build": "rollup --config",
+    "build": "smartbundle",
     "prepack": "pnpm build",
     "prepare": "husky",
     "test": "vitest",
@@ -57,8 +49,7 @@
     "patronum": "^2.3.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
-    "rollup": "^4.25.0",
-    "rollup-plugin-ts": "^3.4.5",
+    "smartbundle": "^0.11.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
     "vitest": "^2.1.4"
