chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -34,25 +34,25 @@
     "graphql": "^16.9.0"
   },
   "devDependencies": {
-    "@apollo/client": "^3.11.9",
-    "@changesets/cli": "^2.27.9",
-    "@eslint/js": "^9.14.0",
+    "@apollo/client": "~3.11.10",
+    "@changesets/cli": "^2.27.10",
+    "@eslint/js": "^9.16.0",
     "@types/eslint": "^9.6.1",
-    "@typescript-eslint/parser": "^8.13.0",
-    "@vitest/coverage-istanbul": "^2.1.4",
+    "@typescript-eslint/parser": "^8.17.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "effector": "^23.2.3",
-    "eslint": "^9.14.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import-x": "^4.4.0",
+    "eslint": "^9.16.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import-x": "^4.5.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "patronum": "^2.3.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "react": "^18.3.1",
     "smartbundle": "^0.11.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0",
-    "vitest": "^2.1.4"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "@apollo/client": "^3.6.0",
